--- a/css/style.css
+++ b/css/style.css
@@ -1187,3 +1187,8 @@ header.header-white .navbar .navbar-nav .nav-item a:hover, header.header-white .
 .owl-carousel.arrow-1 .owl-nav .owl-next { right: 0; display: inline-grid; }
 .owl-carousel.arrow-1 .owl-stage-outer { overflow: hidden; }
 .txt-clr{color: white;}
+.mrgn-lf-12{margin-left: 12px;}
+.rounded-image {border-radius: 14px;}
+
+
+
