--- a/css/style.css
+++ b/css/style.css
@@ -968,7 +968,8 @@ header.header-white .navbar .navbar-nav .nav-item a:hover, header.header-white .
                            Footer Info
 -----------------------------------------------------------------------*/
 .footer-info { position: relative; }
-.footer-info .map { border: 0px; width: 100%; height: 600px; position: absolute; top: 0; left: 0; z-index: 1; -webkit-filter: grayscale(100%); -moz-filter: grayscale(100%); -ms-filter: grayscale(100%); -o-filter: grayscale(100%); filter: grayscale(100%); }
+.footer-info .map {  border: 0;width: 100%;height: 600px;position: absolute;top: 0;left: 0;z-index: 1;-webkit-filter: none;-moz-filter: none;
+            -ms-filter: none;-o-filter: none;filter: none; }
 .iq-get-in { position: relative; z-index: 9; background: #fff; padding: 30px 30px; display: inline-block; width: 100%; margin-top: 30px; -webkit-box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.08); -moz-box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.08); box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.08); }
 .contact-form .section-field { position: relative; width: 100%; float: left; }
 .contact-form .section-field input { position: relative; width: 100%; margin-bottom: 20px; border-radius: 4px; padding-left: 20px; height: 48px; line-height: 48px; clear: both; color: #b6b6b6; border: 1px solid #e1e1e1; }
@@ -1189,6 +1190,7 @@ header.header-white .navbar .navbar-nav .nav-item a:hover, header.header-white .
 .txt-clr{color: white;}
 .mrgn-lf-12{margin-left: 12px;}
 .rounded-image {border-radius: 14px;}
+.bdr-img{border: solid lightgray 1px;}
 
 
 
